# mpu6050_rpi

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cpp/: CMakeLists.txt
cpp/mpu6050/: CMakeLists.txt
cpp/mpu6050/inc/: mpu6050.h
cpp/mpu6050/src/: mpu6050.cpp
cpp/test_application/: main.cpp
